Custom--app/main/default/objects/Listing__c/fields/Pool_Maintenance_Paid_by_IH__c.field-meta.xml
<CustomField>
    <fullName>Pool_Maintenance_Paid_by_IH__c</fullName>
    <label>Pool Maintenance Paid by IH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>