Custom--app/main/default/objects/Listing__c/fields/Poor_Turn_Quality__c.field-meta.xml
<CustomField>
    <fullName>Poor_Turn_Quality__c</fullName>
    <label>Poor Turn Quality</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>