Custom--app/main/default/objects/Listing__c/fields/Portfolio_Manager__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DELETE _Portfolio Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Listings1</relationshipName>
    <type>Lookup</type>
</CustomField>