Custom--app/main/default/objects/Listing__c/fields/Portfolio_Submarket__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Submarket__c</fullName>
    <formula>Portfolio__r.Submarket__c</formula>
    <label>Portfolio Submarket</label>
    <type>Text</type>
</CustomField>