Custom--app/main/default/objects/Listing__c/fields/Portfolio_Website__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Website__c</fullName>
    <formula>Residence__r.Website__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portfolio Website</label>
    <type>Text</type>
</CustomField>