Custom--app/main/default/objects/Listing__c/fields/Preleased__c.field-meta.xml
<CustomField>
    <fullName>Preleased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prelease App Received</label>
    <type>Checkbox</type>
</CustomField>