Custom--app/main/default/objects/Listing__c/fields/Previous_Housing_Rent__c.field-meta.xml
<CustomField>
    <fullName>Previous_Housing_Rent__c</fullName>
    <description>This field is populated via Trigger_Listing, which finds the Residence and then populates this value from the same Lease that appears in the Most Recent Lease field.  This happens on insert of a Listing.  This value is not overwritten if later a different Most Recent Lease is entered on Residence.  See D-00012773.</description>
    <inlineHelpText>This value is pulled from the Most Recent Lease that was populated on Residence at the time the Listing was created.  This value is not ever overwritten.</inlineHelpText>
    <label>Previous Housing Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>