Custom--app/main/default/objects/Listing__c/fields/Previous_Lease__c.field-meta.xml
<CustomField>
    <fullName>Previous_Lease__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is populated via a Trigger that finds the Residence and then populates the same Lease that appears in the Most Recent Lease field.  This happens on insert of a Listing.  Previous Lease is not overwritten if later a different Most Recent Lease is entered on Residence.  See D-00012773.</description>
    <inlineHelpText>This is the Most Recent Lease that was populated on Residence at the time the Listing was created.  This value is not ever overwritten.</inlineHelpText>
    <label>Previous Lease</label>
    <referenceTo>Tenant_Card__c</referenceTo>
    <relationshipLabel>Listings</relationshipLabel>
    <relationshipName>Listings</relationshipName>
    <type>Lookup</type>
</CustomField>