Custom--app/main/default/objects/Listing__c/fields/Previous_Lease_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Previous_Lease_Term_Months__c</fullName>
    <label>Previous Lease Term (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>