Custom--app/main/default/objects/Listing__c/fields/Previous_Total_Rent__c.field-meta.xml
<CustomField>
    <fullName>Previous_Total_Rent__c</fullName>
    <description>This field is populated based on the sum of Previous Lease Rent and Previous Housing Rent. Please refer D-00013664 for more details</description>
    <formula>Previous_Lease_Rent__c + Previous_Housing_Rent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Total Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>