Custom--app/main/default/objects/Listing__c/fields/Promoted_Lease__c.field-meta.xml
<CustomField>
    <fullName>Promoted_Lease__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promoted Lease</label>
    <referenceTo>Tenant_Card__c</referenceTo>
    <relationshipLabel>Listings (Promoted Lease)</relationshipLabel>
    <relationshipName>Listings2</relationshipName>
    <type>Lookup</type>
</CustomField>