Custom--app/main/default/objects/Listing__c/fields/Promotion_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Promotion_End_Date__c</fullName>
    <label>Promotion End Date</label>
    <type>Date</type>
</CustomField>