Custom--app/main/default/objects/Listing__c/fields/Property_Address_for_Mail_Merge__c.field-meta.xml
<CustomField>
    <fullName>Property_Address_for_Mail_Merge__c</fullName>
    <formula>IF(LEN(Address__c)>0,  Address__c&amp; " " , "" ) &amp; BR() &amp; 
IF(LEN(City__c)>0, City__c&amp; ", " , "" )&amp; 
IF(LEN(State__c)>0, State__c&amp; " " , "" )&amp; 
IF(LEN(Zip_Code__c)>0, Zip_Code__c,"")</formula>
    <label>Property Address for Mail Merge</label>
    <type>Text</type>
</CustomField>