Custom--app/main/default/objects/Listing__c/fields/Property_Code_Text__c.field-meta.xml
<CustomField>
    <fullName>Property_Code_Text__c</fullName>
    <description>Copy of the Property Code to enable Search</description>
    <label>Search Text_Property Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>