Custom--app/main/default/objects/Listing__c/fields/Property_Notes_Rehab__c.field-meta.xml
<CustomField>
    <fullName>Property_Notes_Rehab__c</fullName>
    <label>Property Notes @ Rehab</label>
    <type>TextArea</type>
</CustomField>