Custom--app/main/default/objects/Listing__c/fields/Property_Notes_Rehab_long__c.field-meta.xml
<CustomField>
    <fullName>Property_Notes_Rehab_long__c</fullName>
    <label>Property Notes @ Rehab</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>