Custom--app/main/default/objects/Listing__c/fields/Property_Score__c.field-meta.xml
<CustomField>
    <fullName>Property_Score__c</fullName>
    <formula>Residence__r.Property_Score__c</formula>
    <inlineHelpText>Score from 1 to 5 describing the physical structure of the asset, with 1 being the lowest and 5 being the highest</inlineHelpText>
    <label>Property Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>