Custom--app/main/default/objects/Listing__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <formula>TEXT(Residence__r.Property_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Type</label>
    <type>Text</type>
</CustomField>