Custom--app/main/default/objects/Listing__c/fields/Re_Key_Notes__c.field-meta.xml
<CustomField>
    <fullName>Re_Key_Notes__c</fullName>
    <label>Re-Key Notes</label>
    <type>TextArea</type>
</CustomField>