Custom--app/main/default/objects/Listing__c/fields/Re_Key_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Re_Key_Requested_Date__c</fullName>
    <label>Re-Key Requested Date</label>
    <type>Date</type>
</CustomField>