Custom--app/main/default/objects/Listing__c/fields/Re_Key_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Re_Key_Scheduled_Date__c</fullName>
    <label>Re-Key Scheduled Date</label>
    <type>Date</type>
</CustomField>