Custom--app/main/default/objects/Listing__c/fields/Recommendations_Selected__c.field-meta.xml
<CustomField>
    <fullName>Recommendations_Selected__c</fullName>
    <label>Recommendations Selected</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Poor Turn Quality</fullName>
            </value>
            <value>
                <fullName>Home Not Priced Competitively</fullName>
            </value>
            <value>
                <fullName>Location Factors</fullName>
            </value>
            <value>
                <fullName>Regional Ops Issue</fullName>
            </value>
            <value>
                <fullName>Adverse Market Conditions</fullName>
            </value>
            <value>
                <fullName>Seasonality Impact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>