Custom--app/main/default/objects/Listing__c/fields/Regional_Ops_Issue__c.field-meta.xml
<CustomField>
    <fullName>Regional_Ops_Issue__c</fullName>
    <label>Regional Ops Issue</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>