Custom--app/main/default/objects/Listing__c/fields/Rehab_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Rehab_Complete_Date__c</fullName>
    <formula>IF ( ISBLANK(Rehab_Remediation_Record__c) = True,  Rehab__r.Office_Signoff_Date__c,  Rehab_Remediation_Record__r.Office_Signoff_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This date will show the Office Sign-Off Date from the Rehab record or the Rehab Remediation record, if applicable.</inlineHelpText>
    <label>Rehab Complete Date</label>
    <type>Date</type>
</CustomField>