Custom--app/main/default/objects/Listing__c/fields/Rehab_Remediation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rehab_Remediation_Reason__c</fullName>
    <inlineHelpText>If there is a significant issue that requires taking the property off the market and sending back to Rehab, this issue should be described here.  (This should be used only for major issues such as fire, flood, signficant vandalism, etc.)</inlineHelpText>
    <label>Rehab Remediation Reason</label>
    <length>155</length>
    <type>Text</type>
</CustomField>