Custom--app/main/default/objects/Listing__c/fields/Rehab_Remediation_Record__c.field-meta.xml
<CustomField>
    <fullName>Rehab_Remediation_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If the PM and Rehab Director agree that a formal Rehab Remediation is needed, a new Rehab record with type "Remediation" should be created and linked here.</inlineHelpText>
    <label>Rehab Remediation Record</label>
    <referenceTo>Rehab__c</referenceTo>
    <relationshipLabel>Listings (Rehab Remediation Record)</relationshipLabel>
    <relationshipName>Listings1</relationshipName>
    <type>Lookup</type>
</CustomField>