Custom--app/main/default/objects/Listing__c/fields/Rehab_Remediation_Record_Text__c.field-meta.xml
<CustomField>
    <fullName>Rehab_Remediation_Record_Text__c</fullName>
    <formula>Rehab_Remediation_Record__r.Name</formula>
    <label>Rehab Remediation Record</label>
    <type>Text</type>
</CustomField>