Custom--app/main/default/objects/Listing__c/fields/Rehab_Remediation_Stage__c.field-meta.xml
<CustomField>
    <fullName>Rehab_Remediation_Stage__c</fullName>
    <formula>TEXT( Rehab_Remediation_Record__r.Stage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rehab Remediation Stage</label>
    <type>Text</type>
</CustomField>