Custom--app/main/default/objects/Listing__c/fields/Rehab_Stage__c.field-meta.xml
<CustomField>
    <fullName>Rehab_Stage__c</fullName>
    <formula>TEXT(Rehab__r.Stage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rehab Stage</label>
    <type>Text</type>
</CustomField>