Custom--app/main/default/objects/Listing__c/fields/Rehab_Superintendent__c.field-meta.xml
<CustomField>
    <fullName>Rehab_Superintendent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rehab Superintendent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Rehab_Supritendents</relationshipName>
    <type>Lookup</type>
</CustomField>