Custom--app/main/default/objects/Listing__c/fields/Rehab_Text__c.field-meta.xml
<CustomField>
    <fullName>Rehab_Text__c</fullName>
    <formula>Rehab__r.Name</formula>
    <label>Rehab Text</label>
    <type>Text</type>
</CustomField>