Custom--app/main/default/objects/Listing__c/fields/Rehab_Type__c.field-meta.xml
<CustomField>
    <fullName>Rehab_Type__c</fullName>
    <formula>TEXT(Rehab__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rehab Type</label>
    <type>Text</type>
</CustomField>