Custom--app/main/default/objects/Listing__c/fields/Remediation_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Remediation_Request_Date__c</fullName>
    <label>Remediation Request Date</label>
    <type>Date</type>
</CustomField>