Custom--app/main/default/objects/Listing__c/fields/Rent_Cafe_Amenities__c.field-meta.xml
<CustomField>
    <fullName>Rent_Cafe_Amenities__c</fullName>
    <inlineHelpText>What date were all the amenities listed on Rent Cafe?</inlineHelpText>
    <label>Listing Amenities Finalized Date</label>
    <type>DateTime</type>
</CustomField>