Custom--app/main/default/objects/Listing__c/fields/Rent_Cafe_Comments__c.field-meta.xml
<CustomField>
    <fullName>Rent_Cafe_Comments__c</fullName>
    <label>Rent Cafe Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>