Custom--app/main/default/objects/Listing__c/fields/Rent_Cafe_Listed__c.field-meta.xml
<CustomField>
    <fullName>Rent_Cafe_Listed__c</fullName>
    <label>Coming Soon Listing Prepared Date</label>
    <type>DateTime</type>
</CustomField>