Custom--app/main/default/objects/Listing__c/fields/Rent_Cafe_Listing__c.field-meta.xml
<CustomField>
    <fullName>Rent_Cafe_Listing__c</fullName>
    <label>Rent Cafe Listing</label>
    <type>Url</type>
</CustomField>