Custom--app/main/default/objects/Listing__c/fields/Rent_Cafe_Photos_Date__c.field-meta.xml
<CustomField>
    <fullName>Rent_Cafe_Photos_Date__c</fullName>
    <inlineHelpText>What date were photos uploaded to Rent Cafe?</inlineHelpText>
    <label>Photos Finalized Date</label>
    <type>DateTime</type>
</CustomField>