Custom--app/main/default/objects/Listing__c/fields/Rent_Includes__c.field-meta.xml
<CustomField>
    <fullName>Rent_Includes__c</fullName>
    <label>Rent Includes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sewer/Water</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Pool Maintenance</fullName>
            </value>
            <value>
                <fullName>Lawn Maintenance</fullName>
            </value>
            <value>
                <fullName>HOA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>