Custom--app/main/default/objects/Listing__c/fields/Rent_Ready__c.field-meta.xml
<CustomField>
    <fullName>Rent_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It will update rent Ready date to Today Datetime when it got checked</description>
    <label>Rent Ready</label>
    <type>Checkbox</type>
</CustomField>