Custom--app/main/default/objects/Listing__c/fields/Rent_Ready_Comments__c.field-meta.xml
<CustomField>
    <fullName>Rent_Ready_Comments__c</fullName>
    <inlineHelpText>Please use this field to add any color related to rent ready date.  If there is a discrepancy between the Rent Ready Date and the Rehab Complete Date and you select "other" from the dropdown above, please use this field to provide the specific reason.</inlineHelpText>
    <label>Rent Ready Comments</label>
    <length>155</length>
    <type>Text</type>
</CustomField>