Custom--app/main/default/objects/Listing__c/fields/Rent_Ready_Date__c.field-meta.xml
<CustomField>
    <fullName>Rent_Ready_Date__c</fullName>
    <label>Rent Ready Date</label>
    <type>Date</type>
</CustomField>