Custom--app/main/default/objects/Listing__c/fields/Rent_Ready_vs_Rehab_Complete_Variance__c.field-meta.xml
<CustomField>
    <fullName>Rent_Ready_vs_Rehab_Complete_Variance__c</fullName>
    <inlineHelpText>If there is a difference between the Rent Ready Date and the Rehab Complete Date, please use the picklist to provide the best explanation.</inlineHelpText>
    <label>Rent Ready vs Rehab Complete Variance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting CMA</fullName>
            </value>
            <value>
                <fullName>Pending License</fullName>
            </value>
            <value>
                <fullName>Pending Municipality/Gov’t Approval</fullName>
            </value>
            <value>
                <fullName>Pending Other 3rd Party Approval (must specify)</fullName>
            </value>
            <value>
                <fullName>Final Clean Incomplete</fullName>
            </value>
            <value>
                <fullName>Other (Must fill in comments)</fullName>
            </value>
            <value>
                <fullName>QC Issues / Remediation Requested</fullName>
            </value>
            <value>
                <fullName>Inventory Control Strategy</fullName>
            </value>
            <value>
                <fullName>Personal Property Hold</fullName>
            </value>
            <value>
                <fullName>Change in Dispo Strategy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>