Custom--app/main/default/objects/Listing__c/fields/Resolution_Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Action_Items__c</fullName>
    <label>Resolution / Action Items</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>