Custom--app/main/default/objects/Listing__c/fields/Resulting_Lease__c.field-meta.xml
<CustomField>
    <fullName>Resulting_Lease__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resulting Lease</label>
    <referenceTo>Tenant_Card__c</referenceTo>
    <relationshipLabel>Listings (Resulting Lease)</relationshipLabel>
    <relationshipName>Listings1</relationshipName>
    <type>Lookup</type>
</CustomField>