Custom--app/main/default/objects/Listing__c/fields/Resulting_Lease_s_Lease_Rent__c.field-meta.xml
<CustomField>
    <fullName>Resulting_Lease_s_Lease_Rent__c</fullName>
    <label>Resulting Lease's Lease Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>