Custom--app/main/default/objects/Listing__c/fields/Resulting_Lease_Total_Rent__c.field-meta.xml
<CustomField>
    <fullName>Resulting_Lease_Total_Rent__c</fullName>
    <formula>Resulting_Lease_s_Lease_Rent__c +  Resulting_Lease_Housing_Rent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resulting Lease Total Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>