Custom--app/main/default/objects/Listing__c/fields/RevEx_Status__c.field-meta.xml
<CustomField>
    <fullName>RevEx_Status__c</fullName>
    <description>It show value of Rehab->RevEx Status</description>
    <formula>TEXT(Rehab__r.RevEx_Status__c)</formula>
    <label>RevEx Status</label>
    <type>Text</type>
</CustomField>