Custom--app/main/default/objects/Listing__c/fields/Romance_Paragraph__c.field-meta.xml
<CustomField>
    <fullName>Romance_Paragraph__c</fullName>
    <label>Romance Paragraph</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>