Custom--app/main/default/objects/Listing__c/fields/Romance_Paragraph_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Romance_Paragraph_Complete_Date__c</fullName>
    <label>Romance Paragraph Finalized Date</label>
    <type>DateTime</type>
</CustomField>