Custom--app/main/default/objects/Listing__c/fields/Romance_Paragraph_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Romance_Paragraph_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Romance Paragraph Finalized</label>
    <type>Checkbox</type>
</CustomField>