Custom--app/main/default/objects/Listing__c/fields/Scheduled_Move_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Move_In_Date__c</fullName>
    <formula>Actual_AppTrack__r.Scheduled_Move_In__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a formula field that reflects the Scheduled Move-In Date from the Primary Applicant Tracking record associated with this Listing.</inlineHelpText>
    <label>Scheduled Move-In Date</label>
    <type>Date</type>
</CustomField>