Custom--app/main/default/objects/Listing__c/fields/Schools_Nearby__c.field-meta.xml
<CustomField>
    <fullName>Schools_Nearby__c</fullName>
    <label>Schools Nearby</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Within 1 Mile</fullName>
            </value>
            <value>
                <fullName>Within 5 Miles</fullName>
            </value>
            <value>
                <fullName>Within 10 Miles</fullName>
            </value>
            <value>
                <fullName>Within 20 Miles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>