Custom--app/main/default/objects/Listing__c/fields/Seasonality_Impact__c.field-meta.xml
<CustomField>
    <fullName>Seasonality_Impact__c</fullName>
    <label>Seasonality Impact</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>