Custom--app/main/default/objects/Listing__c/fields/Secondary_Agent__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SecondaryAgent</relationshipName>
    <type>Lookup</type>
</CustomField>