Custom--app/main/default/objects/Listing__c/fields/Securitized_Asset__c.field-meta.xml
<CustomField>
    <fullName>Securitized_Asset__c</fullName>
    <formula>Portfolio__r.Securitization_Candidate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Securitized Asset?</label>
    <type>Checkbox</type>
</CustomField>