Custom--app/main/default/objects/Listing__c/fields/Sewer_or_Trash_Oai__c.field-meta.xml
<CustomField>
    <fullName>Sewer_or_Trash_Oai__c</fullName>
    <label>Sewer or Trash Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>