Custom--app/main/default/objects/Listing__c/fields/Showings_Last_10_Days__c.field-meta.xml
<CustomField>
    <fullName>Showings_Last_10_Days__c</fullName>
    <label># Showings Last 10 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>