Custom--app/main/default/objects/Listing__c/fields/Sign_Comments__c.field-meta.xml
<CustomField>
    <fullName>Sign_Comments__c</fullName>
    <label>Sign Comments</label>
    <type>TextArea</type>
</CustomField>