Custom--app/main/default/objects/Listing__c/fields/Sign_Installed_Date__c.field-meta.xml
<CustomField>
    <fullName>Sign_Installed_Date__c</fullName>
    <label>Sign Installed Date</label>
    <type>Date</type>
</CustomField>