Custom--app/main/default/objects/Listing__c/fields/Sign_Placement__c.field-meta.xml
<CustomField>
    <fullName>Sign_Placement__c</fullName>
    <label>Sign Placement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Window</fullName>
            </value>
            <value>
                <fullName>Yard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>