Custom--app/main/default/objects/Listing__c/fields/Sign_Removal_Confimed__c.field-meta.xml
<CustomField>
    <fullName>Sign_Removal_Confimed__c</fullName>
    <label>Sign Removal Confimed</label>
    <type>Date</type>
</CustomField>