Custom--app/main/default/objects/Listing__c/fields/Sign_Repair_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Sign_Repair_Request_Date__c</fullName>
    <label>Sign Repair Request Date</label>
    <type>Date</type>
</CustomField>