Custom--app/main/default/objects/Listing__c/fields/Sign_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Sign_Scheduled__c</fullName>
    <label>Sign Scheduled</label>
    <type>Date</type>
</CustomField>