Custom--app/main/default/objects/Listing__c/fields/Social_Media_Comments__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Comments__c</fullName>
    <label>Social Media Comments</label>
    <type>TextArea</type>
</CustomField>