Custom--app/main/default/objects/Listing__c/fields/Social_Media_Paragraph__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Paragraph__c</fullName>
    <inlineHelpText>This field has 140 characters as per the social media character limits.</inlineHelpText>
    <label>Social Media Paragraph</label>
    <length>140</length>
    <type>Text</type>
</CustomField>