Custom--app/main/default/objects/Listing__c/fields/Social_Media_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Photo_URL__c</fullName>
    <label>Social Media Photo (URL)</label>
    <type>Url</type>
</CustomField>