Custom--app/main/default/objects/Listing__c/fields/Social_Media_Post_Date__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Post_Date__c</fullName>
    <label>Social Media Post Date</label>
    <type>Date</type>
</CustomField>