Custom--app/main/default/objects/Listing__c/fields/Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Sq_Ft__c</fullName>
    <formula>Residence__r.Square_Feet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sq. Ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>