Custom--app/main/default/objects/Listing__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>If the Primary Application Tracking record is populated, the Listing will move through the Status updates automatically via one or more Triggers created by Appirio in early 2013.  There are also these Workflow Rules on Application Tracking that work in conjunction with these Triggers:  (1) Update App Status When Lease is Prepared, and (2) Update App Status when Deposit Received.  Use SkipTriggersForUser for any data updates to Application Tracking or Listing.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Down (In Rehab)</fullName>
                <default>true</default>
                <label>Down (In Rehab)</label>
            </value>
            <value>
                <fullName>Down - Application Pending</fullName>
            </value>
            <value>
                <fullName>Down - Application Approved</fullName>
            </value>
            <value>
                <fullName>Down - Preleased</fullName>
            </value>
            <value>
                <fullName>Down - Pre-Marketing</fullName>
            </value>
            <value>
                <fullName>OTM - Ready to List</fullName>
            </value>
            <value>
                <fullName>OTM - Active Listing</fullName>
            </value>
            <value>
                <fullName>OTM - Application Pending</fullName>
            </value>
            <value>
                <fullName>OTM - Application Approved</fullName>
            </value>
            <value>
                <fullName>OTM - Pending Deposit</fullName>
            </value>
            <value>
                <fullName>Leased</fullName>
            </value>
            <value>
                <fullName>HOLD - Currently Not Leasable</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Down - Pending Hold Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>