Custom--app/main/default/objects/Listing__c/fields/Status_Comments__c.field-meta.xml
<CustomField>
    <fullName>Status_Comments__c</fullName>
    <label>Status Comments</label>
    <type>TextArea</type>
</CustomField>