Custom--app/main/default/objects/Listing__c/fields/Tenant_App_Required__c.field-meta.xml
<CustomField>
    <fullName>Tenant_App_Required__c</fullName>
    <label>Tenant App Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>