Custom--app/main/default/objects/Listing__c/fields/Tenant_Application_Notes__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Application_Notes__c</fullName>
    <label>Tenant Application Notes</label>
    <type>TextArea</type>
</CustomField>