Custom--app/main/default/objects/Listing__c/fields/Total_Apps__c.field-meta.xml
<CustomField>
    <fullName>Total_Apps__c</fullName>
    <inlineHelpText>This counts the number of applications associated with this listing, excluding "additional applicants."</inlineHelpText>
    <label># Apps</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>