Custom--app/main/default/objects/Listing__c/fields/Total_Incoming_Calls__c.field-meta.xml
<CustomField>
    <fullName>Total_Incoming_Calls__c</fullName>
    <label># Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>